# multivisor

./: .gitignore  .postcssrc.js  .travis.yml  README.md  TODO.md  auto-imports.d.ts  components.d.ts  docker-compose.yml  eslint.config.js  generate_secret_key.py  index.html  multivisor  multivisor.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  typed-router.d.ts  vite.config.mjs  xml_client.py
.github/workflows/: ci.yml
config/: index.js
docker/: Dockerfile
docker/multivisor/: multivisor.conf
docker/nginx/: nginx.conf
docker/nginx/conf.d/: multivisor.conf
docker/supervisord/: baslid001.conf  lid001.conf  lid002.conf
examples/full_example/: demo  exits  multivisor.conf  supervisord_baslid001.conf  supervisord_lid001.conf  supervisord_lid002.conf  talkative
frontend/: .babelrc  README.md  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: About.vue  Dashboard.vue  Footer.vue  GlobalTable.vue  Header.vue  NavBar.vue  Page.vue  Process.vue  ProcessDetails.vue  ProcessTable.vue  Processes.vue  Summary.vue  Supervisor.vue  Supervisors.vue
frontend/src/plugins/: multivisor.js
frontend/src/router/: index.js
multivisor/: cli.py  client.py  dispatcher.py  multivisor.py  rpc.py  server.py  signals.py  util.py  zrpc.py
multivisor/client/: cli.py  http.py  repl.py  util.py
multivisor/server/: rpc.py  util.py  web.py  zrpc.py
multivisor/server/static/: bootstrap-icons.min.css  bootstrap.bundle.min.js  bootstrap.min.css  htmx.min.js  masonry.pkgd.min.js
multivisor/server/templates/: actions.html  index.html  log.html  process.html  process_log_tail.html  state.html  supervisor_log.html  view.html
multivisor/server/templates/groups/: card.html  index.html  row.html
multivisor/server/templates/processes/: index.html  row.html  table_body.html
multivisor/server/templates/supervisors/: card.html  index.html  row.html
multivisor/server/tests/: test_web.py
multivisor/tests/: test_multivisor.py
src/: App.vue  api.js  main.js  multivisor.js
src/components/: ActionBar.vue  AlertBar.vue  Footer.vue  NotificationBar.vue  ToolBar.vue
src/components/common/: State.vue  Tile.vue
src/components/group/: Card.vue  Chip.vue  List.vue  Page.vue
src/components/login/: Page.vue
src/components/process/: Chip.vue  Details.vue  Log.vue  Page.vue  ProcessDetails.vue  Processes.vue  Row.vue  State.vue  Table.vue  Tile.vue
src/components/supervisor/: Card.vue  Chip.vue  List.vue  Page.vue  Supervisors.vue
src/components/user/: Profile.vue  Signin.vue  Signup.vue
src/filters/: date.js
src/layouts/: default.vue
src/pages/: group.vue  index.vue  login.vue  process.vue  supervisor.vue
src/plugins/: index.js  vuetify.js
src/router/: index.js
src/store/: index.js
src/stores/: app.js
tests/: conftest.py  functions.py  multivisor_test.conf  supervisord_test001.conf  test_multivisor.py  test_web.py
