[build-system]
requires = ["setuptools>=51.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--cov=multivisor",
    "--cov-report=html", "--cov-report=term",
    "--durations=2", "--verbose"
]
testpaths = ["tests"]

[tool.black]
# just signal the project uses black for editors like emacs python-black