[build]
build_base=build_py

[metadata]
name = multivisor
version = attr: multivisor.__version__
author = Tiago Coutinho
author_email = coutinhotiago@gmail.com
description = A centralized supervisor UI (web & CLI)
long_description = file: README.md, HISTORY.md
long_description_content_type = text/markdown
url = https://github.com/tiagocoutinho/multivisor
license = GNU General Public License v3
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Boot
    Topic :: System :: Monitoring
    Topic :: System :: Systems Administration

[options]
zip_safe = true
python_requires = >=2.7
tests_require = pytest >=3
packages = find:
include_package_data = True
install_requires =
    six
    gevent>=1.3

[options.entry_points]
console_scripts =
    multivisor = multivisor.server.web:main
    multivisor-rpc = multivisor.server.rpc:main
    multivisor-cli = multivisor.client.cli:main

[options.package_data]
multivisor.server =
    dist/*
    dist/static/css/*
    dist/static/js/*

[bdist_wheel]
universal = 1

[bumpversion]
current_version = 6.0.0
commit = True
tag = True

[bumpversion:file:multivisor/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[flake8]
max-line-length = 88
extend-ignore = E203, E402